# segmentacao-folhas

./: .gitignore  main.py  pyproject.toml  requirements.txt
analises/: segmentacao.ipynb
