[project]
name = "folhas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "transformers>=5.9.0",
]
